--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@remix-run/cloudflare-pages": "^1.8.2",
     "@remix-run/react": "^1.8.2",
     "cross-env": "^7.0.3",
-    "gsap": "^3.11.3",
+    "framer-motion": "^7.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
